@@ -181,3 +181,5 @@
 "Preferences" = "Preferences";
 "General" = "General";
 "Appearance" = "Appearance";
+"Cannot create scripts folder title" = "Cannot create scripts folder";
+"Cannot create scripts folder body" = "The Scripts folder cannot be created at '%@'. Vienna will not install the selected script.";
