@@ -182,3 +182,5 @@
 "Preferences" = "Einstellungen";
 "General" = "Allgemein";
 "Appearance" = "Erscheinungsbild";
+"Cannot create scripts folder title" = "Cannot create scripts folder";
+"Cannot create scripts folder body" = "The Scripts folder cannot be created at '%@'. Vienna will not install the selected script.";
