@@ -168,17 +168,19 @@
 "2 Weeks Ago" = "2 veckor tillbaka";
 "A month" = "En månad";
 "Activity Window" = "Aktivitetsvisare";
-"Error importing subscriptions body" = "Cannot import the specified file. The file contents are not valid OPML XML format.";
-"Error importing subscriptions title" = "Import error";
-"Rename" = "Byt namn";
+"Error importing subscriptions body" = "Kan inte importera specificerad fil. Filens innehåll är inte i validerat OPML/XML-format.";
+"Error importing subscriptions title" = "Fel vid import";
+"Rename" = "Döp om";
 "Mark All Read" = "Markera alla som lästa";
 "Move Folders" = "Flytta mappar";
 "Downloads" = "Hämtade filer";
-"Invalid style title" = "The style %@ appears to be corrupted";
-"Invalid style body" = "The Default style will be used instead.";
-"Downloads Running" = "One or more downloads are in progress";
-"Downloads Running text" = "Do you want to cancel all downloads and close Vienna now?";
-"Mark All Subscriptions as Read" = "Mark All Subscriptions as Read";
+"Invalid style title" = "Stilen %@ verkar vara korrupt";
+"Invalid style body" = "Standardstilen används istället.";
+"Downloads Running" = "En eller flera nedladdningar pågår";
+"Downloads Running text" = "Vill du avbryta alla nedladdningar och avsluta Vienna nu?";
+"Mark All Subscriptions as Read" = "Markera alla prenumerationer som lästa";
 "Preferences" = "Inställningar";
 "General" = "Allmänt";
 "Appearance" = "Utseende";
+"Cannot create scripts folder title" = "Cannot create scripts folder";
+"Cannot create scripts folder body" = "The Scripts folder cannot be created at '%@'. Vienna will not install the selected script.";
