@@ -8,6 +8,7 @@ Known Issues (May not be fixed)
 ===============================
 - Renaming a folder does not update the folder name in smart folders that reference it.
 - The isAccessible(NSString * urlString) function returns NO behind a firewall.
+- Auto-expire needs to run at times other than start up.
 
 Post 2.0 Items
 ==============
